discussion/kv_engine/133990/133990_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Expose stats_audit for Prometheus

Change-Id: I60d78f36658f8d8e8b445d3a57d31af7707f622e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-08-08 21:43:08.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-09 04:38:02.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25544/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25544/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3717/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:6: error: use of undeclared identifier "ep_storage_age" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:22: error: use of undeclared identifier "microseconds" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:36: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:38: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:40: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:41: error: expected ";" after top level declarator [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                        ^
                                        ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3717/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3717/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29507/ : FAILURE

Link error: fatal error LNK1168: cannot open magma\magma.dll for writing ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29507/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12862/ : FAILURE

Compile error at [2020-08-08T22:09:28.665Z] ../kv_engine/include/statistics/all_stats.h:151:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 213>::_Type {aka cb::stats::StatSpec [213]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12862/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4077/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5049/ : FAILURE

Compile error at [2020-08-08T22:08:03.573Z] ../kv_engine/include/statistics/all_stats.h:151:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 213>::_Type {aka cb::stats::StatSpec [213]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5049/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4960/ : FAILURE

Compile error at [2020-08-08T22:07:03.836Z] ../kv_engine/include/statistics/all_stats.h:151:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 213>::_Type {aka cb::stats::StatSpec [213]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4960/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5146/ : FAILURE

Compile error at [2020-08-08T22:06:04.300Z] ../kv_engine/include/statistics/all_stats.h:151:1:
error: missing braces around initializer for ?std::__array_traits<cb::stats::StatSpec, 213>::_Type {aka cb::stats::StatSpec [213]}? [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5146/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2232/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
